--- a/portfolio/hugo.toml
+++ b/portfolio/hugo.toml
@@ -1,3 +1,8 @@
 baseURL = 'https://sangeethankumar.github.io/'
 languageCode = 'en-us'
 title = 'Sangeetha Nandakumar'
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
