--- a/portfolio/hugo.toml
+++ b/portfolio/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://sangeethankumar.github.io/'
+baseURL = 'https://sangeethankumar.github.io/personal-website/'
 languageCode = 'en-us'
 title = 'Sangeetha Nandakumar'
 
